# network.matrixhub

./: .env.example  .env.production  .gitignore  .vercelignore  AUTHENTICATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_RELEASE.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_SETUP.md  docker-compose.yml  index.html  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci.yml  dependency-review.yml
api/: index.py  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  seed_db.py  test_auth.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  entities.py
backend/app/core/: __init__.py  config.py  monitoring.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  entity.py
backend/app/schemas/: __init__.py  auth.py  entity.py
backend/migrations/: env.py
backend/migrations/versions/: 20241227_0001_initial_schema.py  20241227_0002_add_test_users.py
backend/network_matrixhub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/unit/: test_health.py
frontend/: .env.example  .env.local  .env.production.example  .vercelignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/[uid]/: page.tsx
frontend/src/app/directory/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Modals.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  mcp-client.ts  mock-data.ts  monitoring.ts
frontend/src/views/: DashboardView.tsx  JobsView.tsx  LandingView.tsx  MessagesView.tsx  NetworkView.tsx  ProfileView.tsx  SettingsView.tsx
infra/: .env.backend.example  .env.frontend.example  docker-compose.yml  init-db.sql  nginx.conf
js/: app.js
scripts/: deploy-vercel.sh  setup-vercel.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/[uid]/: page.tsx
