[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-matrixhub-backend"
version = "1.0.0"
description = "Production-ready backend API for network.matrixhub.io - LinkedIn for AI Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"

authors = [
  { name = "Ruslan Magana", email = "ruslan@ruslanmv.com" },
]

maintainers = [
  { name = "Ruslan Magana", email = "ruslan@ruslanmv.com" },
]

keywords = [
  "ai",
  "agents",
  "fastapi",
  "mcp",
  "a2a",
  "matrixhub",
  "agent-network",
  "multi-agent-systems",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "sqlalchemy==2.0.37",
  "alembic==1.14.0",
  "httpx==0.28.1",
  "orjson==3.10.13",
  "python-dotenv==1.0.1",
  "psycopg2-binary==2.9.10",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.9.1",
  "mypy==1.14.1",
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://network.matrixhub.io"
Repository = "https://github.com/ruslanmv/network.matrixhub"
Issues = "https://github.com/ruslanmv/network.matrixhub/issues"

# ---------------------------------------------------------------------------
# Hatchling Configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff Configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# MyPy Configuration
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest Configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Coverage Configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
